# NovaART

./: .gitignore  Makefile  build-host.sh  ccc.txt  progress.md  staging-manifest.txt
src/: art.c  canvas_render.c  canvas_render.h  egl.c  host_android_log.c  main.c  meson.build  nova.h  softgfx.c  softgfx.h  wayland.c
src/aidl/nova/android/view/: DisplayInfo.aidl  IWindow.aidl  IWindowManager.aidl  IWindowSession.aidl  IWindowSessionCallback.aidl  InputChannel.aidl  SurfaceControl.aidl  WindowManager.aidl  WindowRelayoutResult.aidl
src/java/nova-shims/android/accessibilityservice/: AccessibilityServiceInfo.java
src/java/nova-shims/android/accounts/: AbstractAccountAuthenticator.java  Account.java  AccountAuthenticatorResponse.java  AccountManager.java  AccountManagerCallback.java  AccountManagerFuture.java  NetworkErrorException.java
src/java/nova-shims/android/animation/: AnimatorInflater.java  AnimatorListenerAdapter.java  ArgbEvaluator.java  FloatEvaluator.java  Keyframe.java  LayoutTransition.java  ObjectAnimator.java  PropertyValuesHolder.java  StateListAnimator.java  TimeAnimator.java  TimeInterpolator.java  TypeConverter.java  TypeEvaluator.java
src/java/nova-shims/android/annotation/: SuppressLint.java  TargetApi.java
src/java/nova-shims/android/app/: ActionBar.java  Activity.java  ActivityGroup.java  ActivityManager.java  ActivityOptions.java  AlarmManager.java  AppComponentFactory.java  AppGlobals.java  AppOpsManager.java  Application.java  ApplicationExitInfo.java  BroadcastOptions.java  DatePickerDialog.java  Dialog.java  DialogFragment.java  DownloadManager.java  ForegroundServiceStartNotAllowedException.java  Fragment.java  FragmentManager.java  FragmentTransaction.java  GrammaticalInflectionManager.java  Instrumentation.java  IntentService.java  KeyguardManager.java  ListActivity.java  LocaleManager.java  Notification.java  NotificationChannel.java  NotificationChannelGroup.java  NotificationManager.java  PendingIntent.java  Person.java  PictureInPictureParams.java  PictureInPictureUiState.java  Presentation.java  ProgressDialog.java  RemoteAction.java  RemoteInput.java  SearchManager.java  SearchableInfo.java  (+6 more)
src/java/nova-shims/android/appwidget/: AppWidgetManager.java  AppWidgetProvider.java  AppWidgetProviderInfo.java
src/java/nova-shims/android/bluetooth/: BluetoothAdapter.java  BluetoothClass.java  BluetoothDevice.java  BluetoothServerSocket.java  BluetoothSocket.java
src/java/nova-shims/android/content/: ActivityNotFoundException.java  AsyncQueryHandler.java  AsyncTaskLoader.java  AttributionSource.java  BroadcastReceiver.java  ClipData.java  ClipDescription.java  ClipboardManager.java  ComponentCallbacks.java  ComponentName.java  ContentProvider.java  ContentProviderClient.java  ContentProviderOperation.java  ContentProviderResult.java  ContentResolver.java  ContentUris.java  ContentValues.java  Context.java  ContextWrapper.java  DialogInterface.java  Intent.java  IntentFilter.java  IntentSender.java  LocusId.java  MutableContextWrapper.java  ServiceConnection.java  SharedPreferences.java  SimpleSharedPreferences.java  UriMatcher.java  UriPermission.java
src/java/nova-shims/android/credentials/: ClearCredentialStateException.java  ClearCredentialStateRequest.java  CreateCredentialException.java  CreateCredentialRequest.java  CreateCredentialResponse.java  Credential.java  CredentialManager.java  CredentialOption.java  GetCredentialException.java  GetCredentialRequest.java  GetCredentialResponse.java  PrepareGetCredentialResponse.java
src/java/nova-shims/android/database/: AbstractCursor.java  AbstractWindowedCursor.java  CharArrayBuffer.java  ContentObservable.java  ContentObserver.java  Cursor.java  CursorIndexOutOfBoundsException.java  CursorWindow.java  CursorWrapper.java  DataSetObservable.java  DataSetObserver.java  DatabaseErrorHandler.java  DatabaseUtils.java  DefaultDatabaseErrorHandler.java  MatrixCursor.java  MergeCursor.java  Observable.java  SQLException.java
src/java/nova-shims/android/drm/: DrmManagerClient.java
src/java/nova-shims/android/gesture/: Gesture.java  GestureLibraries.java  GestureLibrary.java  GestureOverlayView.java  Prediction.java
src/java/nova-shims/android/graphics/: Bitmap.java  BitmapShader.java  BlendMode.java  BlendModeColorFilter.java  BlurMaskFilter.java  Camera.java  Canvas.java  Color.java  ColorFilter.java  ColorMatrix.java  ColorMatrixColorFilter.java  ColorSpace.java  ComposePathEffect.java  ComposeShader.java  CornerPathEffect.java  DashPathEffect.java  DrawFilter.java  Gainmap.java  ImageDecoder.java  Insets.java  LightingColorFilter.java  LinearGradient.java  MaskFilter.java  Matrix.java  Movie.java  NinePatch.java  Outline.java  Paint.java  Path.java  PathDashPathEffect.java  PathEffect.java  PathIterator.java  PathMeasure.java  Picture.java  Point.java  PointF.java  PorterDuff.java  PorterDuffColorFilter.java  PorterDuffXfermode.java  PostProcessor.java  (+12 more)
src/java/nova-shims/android/hardware/: Camera.java  HardwareBuffer.java  Sensor.java  SensorEvent.java  SensorEventListener.java  SensorManager.java  SyncFence.java
src/java/nova-shims/android/inputmethodservice/: InputMethodService.java
src/java/nova-shims/android/location/: Address.java  Criteria.java  Geocoder.java  GnssMeasurementsEvent.java  GnssStatus.java  GpsSatellite.java  GpsStatus.java  LocationListener.java  LocationManager.java  LocationProvider.java  LocationRequest.java
src/java/nova-shims/android/media/: ApplicationMediaCapabilities.java  AudioAttributes.java  AudioDeviceCallback.java  AudioDeviceInfo.java  AudioFocusRequest.java  AudioFormat.java  AudioManager.java  AudioProfile.java  AudioRecord.java  AudioRouting.java  AudioTimestamp.java  AudioTrack.java  DrmInitData.java  ExifInterface.java  FaceDetector.java  Image.java  ImageReader.java  (+30 more)
src/jni/: android_graphics_Bitmap.c  android_graphics_BitmapFactory.c  android_graphics_Canvas.c  android_graphics_Paint.c  android_opengl_GLUtils.c  android_runtime.c  com_google_android_gles_jni_EGLImpl.c  meson.build  nova_canvas_render.c
src/tests/: test_softgfx.c
(+813 files in other folders)
